--- a/src/Mzayad.Web/Areas/admin/Views/Auctions/_AddEditAuction.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Auctions/_AddEditAuction.cshtml
@@ -122,9 +122,10 @@
                 </div>
             </section>
 
-            <section class="form-buttons">
-                <button type="submit" class="btn btn-default">Save</button>
-            </section>
+    <section class="form-buttons">
+        @Html.HiddenFor(i=>i.Auction.CreatedByUserId)
+        <button type="submit" class="btn btn-default">Save</button>
+    </section>
 
         }
     </div>
