--- a/src/Mzayad.Web/Areas/admin/Views/Products/Add.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Products/Add.cshtml
@@ -30,6 +30,7 @@
                 <button type="submit" class="btn btn-default">Save And Continue</button>
             </section>
             @Html.HiddenFor(i=>i.GoToAuction)
+            @Html.HiddenFor(i => i.Product.CreatedByUserId)
         }
     </div>
 </div>
