--- a/src/Mzayad.Web/Areas/admin/Views/Specifications/Add.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Specifications/Add.cshtml
@@ -13,18 +13,7 @@
         {
             @Html.AntiForgeryToken()
 
-            <section>
-                <div class="form-group">
-                    @Html.LabelFor(i => i.Specification.Name, "Name")
-                    @Html.EditorFor(i => i.Specification.Name,Model.Specification)
-                    @Html.ValidationMessageFor(m => m.Specification.Name, "Please enter a specification name.")
-                </div>
-                
-            </section>
-
-            <section class="form-buttons">
-                <button type="submit" class="btn btn-default">Save And Continue</button>
-            </section>
+            @Html.Partial("_AddEdit")
         }
     </div>
 </div>
