--- a/src/Mzayad.Web/Areas/admin/Views/Specifications/Index.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Specifications/Index.cshtml
@@ -3,12 +3,11 @@
 @model IEnumerable<Specification>
 
 @{
-    ViewBag.Title = "Specification";
+    ViewBag.Title = "Specifications";
 }
 
-
 <ul class="link-list">
-    <li><i class="fa fa-plus"></i> @Html.ActionLink("Add Specification", "Add", "Specifications")</li>
+    <li>@Html.ActionLink("Add Specification", "Add", "Specifications")</li>
 </ul>
 
 <table class="@Html.Css().GridTable">
@@ -16,16 +15,18 @@
         <tr>
             <th>Name</th>
             <th></th>
-        </tr>
-       
+            <th></th>
+        </tr> 
     </thead>
     <tbody>
         @foreach (var specification in Model)
         {
             <tr>
                 <td>@specification.Name</td>
-                <td>
-                    @Html.ActionLink("Edit","Edit","Specifications",new {id=@specification.SpecificationId},null) | 
+                <td class="link-cell">
+                    @Html.ActionLink("Edit","Edit","Specifications",new {id=@specification.SpecificationId},null)
+                </td>
+                <td class="link-cell">
                     @Html.ActionLink("Delete", "Delete", "Specifications", new { id = @specification.SpecificationId }, null)
                 </td>
             </tr>
