--- a/src/Mzayad.Web/Areas/admin/Views/Specifications/Delete.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Specifications/Delete.cshtml
@@ -1,21 +1,21 @@
 ﻿@using Mzayad.Web.Extensions
+@using OrangeJetpack.Base.Web
 @model Mzayad.Models.Specification
 
 @{
-    ViewBag.Title = "Delete Specification";
-    
+    ViewBag.Title = "Delete Specification";  
 }
 
-@Html.StatusMessage(string.Format("Are you sure that you want to permanently delete the specification <strong>{0}</strong>",Model.Name))
+
+@Html.StatusMessage(string.Format("Are you sure that you want to permanently delete the specification <strong>{0}</strong>?", Model.Name), StatusMessageType.Warning)
 @using (Html.BeginForm())
 {
-
     @Html.AntiForgeryToken()
 
     <section class="form-buttons">
         <button type="submit" class="btn btn-default">Yes</button>
         <button id="btnCancel" class="btn btn-default">Cancel</button>
-        @Html.HiddenFor(i=>i.SpecificationId);
+        @Html.HiddenFor(i=>i.SpecificationId)
     </section>
 }
 @section scripts
