MZ-26 added btn-cancel CSS class to cancel button; moved history.back() logic into site.js

--- a/src/Mzayad.Web/Areas/admin/Views/Specifications/Delete.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Specifications/Delete.cshtml
@@ -14,22 +14,7 @@
 
     <section class="form-buttons">
         <button type="submit" class="btn btn-default">Yes</button>
-        <button id="btnCancel" class="btn btn-default">Cancel</button>
+        <button type="button" class="btn btn-default btn-cancel">Cancel</button>
         @Html.HiddenFor(i=>i.SpecificationId)
     </section>
-}
-@section scripts
-{
-    <script type="text/javascript">
-        $(function() {
-
-            $("#btnCancel").click(function() {
-
-                history.back();
-
-            });
-
-        });
-    </script>
-
 }
