MZ-26 converted EditViewModel.SelectedCategories from IEnumerable<string> to IEnumerable<int> to removed string <> int conversion code

--- a/src/Mzayad.Web/Areas/admin/Views/Products/ProductCategories.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Products/ProductCategories.cshtml
@@ -3,7 +3,7 @@
 {
     <li class="checkbox">
         <label>
-            <input type="checkbox" name="SelectedCategories" id="@string.Format("Category{0}", category.CategoryId)" value="@category.CategoryId" parentid="@category.ParentId" checked="@Model.SelectedCategories.Contains(category.CategoryId.ToString())" />
+            <input type="checkbox" name="SelectedCategories" id="@string.Format("Category{0}", category.CategoryId)" value="@category.CategoryId" parentid="@category.ParentId" checked="@Model.SelectedCategories.Contains(category.CategoryId)" />
             @category.Name
         </label>
 
