MZ-26 extended the localization validation hack for ckeditor (need to find a permanent solution)

--- a/src/Mzayad.Web/Areas/admin/Views/Products/Edit.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Products/Edit.cshtml
@@ -260,7 +260,10 @@
 
                 // CK editor breaks localized content validation so disable with hack
                 var hiddenValidator = $("input[name='Product.Description']");
-                hiddenValidator.val(hiddenValidator.val() + "...");
+                if (hiddenValidator.val().length === 0) {
+                    hiddenValidator.val("...");
+                    hiddenValidator.siblings(".localized-input").val("<p></p>");
+                }
             };
 
             //event for ProductSpecification Section
