--- a/src/Mzayad.Web/Areas/admin/Views/Products/Edit.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Products/Edit.cshtml
@@ -298,6 +298,9 @@
                     valuesGroup.removeClass("form-group-disabled");
                     parentGroup.next().show();
                     valueInputs.prop("disabled", false);
+                } else {
+                    valuesGroup.addClass("form-group-disabled");
+                    valueInputs.val("").prop("disabled", true);
                 }
 
             });
