added silly wow.js animation to homepage

--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -2,6 +2,61 @@
     ViewBag.Title = Global.Home;
 }
 
+<style>
+    
+    .mz-wrapper {
+        width: 788px;
+        margin: 0 auto;
+    }
+    
+    .mz {
+        float: left;
+        height: 190px;
+        background: transparent url(//az712326.vo.msecnd.net/assets/mz-freehand-635610878999247526.png) 0 0 no-repeat;
+    }
+
+    .mz-m {
+        width: 173px;
+    }
+
+    .mz-z {
+        width: 130px;
+        background-position-x: -173px;
+    }
+
+    .mz-a1 {
+        width: 106px;
+        background-position-x: -303px;
+    }
+
+    .mz-y {
+        width: 134px;
+        background-position-x: -409px;
+    }
+
+    .mz-a2 {
+        width: 109px;
+        background-position-x: -543px;
+    }
+
+    .mz-d {
+        width: 136px;
+        background-position-x: -652px;
+    }
+
+</style>
+
 <div class="jumbotron">
     <h1>@Global.Welcome</h1>
+    @*<div class="mz-wrapper hidden-sm">
+        <div class="mz mz-m wow fadeInDown" data-wow-delay="1s"></div>
+        <div class="mz mz-z wow fadeInUp" data-wow-delay="1.5s"></div>
+        <div class="mz mz-a1 wow fadeInDown" data-wow-delay="2s"></div>
+        <div class="mz mz-y wow fadeInUp" data-wow-delay="2.5s"></div>
+        <div class="mz mz-a2 wow fadeInDown" data-wow-delay="3s"></div>
+        <div class="mz mz-d wow fadeInUp" data-wow-delay="3.5s"></div>
+    </div>
+    <div class="clearfix"></div>*@
 </div>
+
+<img src="//az712326.vo.msecnd.net/assets/mz-freehand-635610878999247526.png" style="display: none;" />
